--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -40,13 +40,17 @@
   }
   
   .login-form__btn {
-    background-color: var(--yellow);
     cursor: pointer;
     padding: 20px 0;
     border-radius: 5px;
     border: none;
     padding: 20px 0;
     margin-bottom: 15px;
+    transition: background-color 0.2s ease-in-out;
+  }
+
+  .login-form__btn--hover:hover {
+    background-color: var(--yellow);
   }
   
   .login-form__a {
