--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,18 @@
 
 /* Components */
 @import "./components/status-bar.css";
+@import "./components/nav-bar.css";
+@import "./components/screen-header.css";
+@import "./components/user-component.css";
 
 /* Screens */
 @import "./screens/login.css";
+@import "./screens/friends.css";
 
 
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  color: #2e363e;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
