--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -43,4 +43,13 @@
 
 .user-component__column:last-child {
     color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.user-component__time {
+  display: block;
+  margin-bottom: 0px;
+  padding-bottom: 10px;
 }
