--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -7,6 +7,7 @@
   padding: 15px 0px;
   font-size: 16px;
   margin-bottom: 15px;
+  margin-top: -15px;
 }
 
 #friends-display-link i {
@@ -17,8 +18,6 @@
   margin-left: 5px;
   margin-right: 15px;
 }
-
-
 
 .friends-screen {
   padding: 0px var(--horizontal-space);
