--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,36 +1,86 @@
 .nav {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #f9f9fa;
-    padding: 20px 50px;
-    box-sizing: border-box;
-    border-top: 1px solid rgba(121, 121, 121, 0.3);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #f9f9fa;
+  padding: 20px 50px;
+  box-sizing: border-box;
+  border-top: var(--main-border);
 }
 
 .nav__list {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav__link {
-    color: #2e363e;
-    position: relative;
+  color: #2e363e;
+  position: relative;
+}
+
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transfrom: rotateY(180deg);
+  }
 }
 
 .nav__notification {
-    position: absolute;
-    left: 20px;
-    bottom: 14px;
+  position: absolute;
+  left: 20px;
+  bottom: 14px;
+  animation: notificationAnimation 2s linear infinite;
 }
 
+@keyframes appearBtnAnimation {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+.nav__btn {
+    opacity: 0;
+    transform: translateY(50px);
+    animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+.nav__btn:nth-child(2) {
+    animation-delay: 0.3s;
+}
+.nav__btn:nth-child(3) {
+    animation-delay: 0.6s;
+}
+.nav__btn:last-child {
+    animation-delay: 0.9s;
+}
+
+
+@keyframes settingsAnimation {
+    0% {
+        transform: translateY(3px);
+    }
+    50% {
+        transform: translateY(-3px);
+    }
+    100% {
+        transform: translateY(3px);
+    }
+}
 .nav__settings {
-    background-color: #FF6228;
-    display: flex;
-    height: 5px;
-    width: 5px;
-    border-radius: 50%;
-    position: absolute;
-    left: 32px;
-    bottom: 28px;
+  background-color: #ff6228;
+  display: flex;
+  height: 5px;
+  width: 5px;
+  border-radius: 50%;
+  position: absolute;
+  left: 32px;
+  bottom: 28px;
+  animation: settingsAnimation 1.5s ease-in-out infinite;
 }
