--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -1,9 +1,14 @@
 .screen-header {
+    position: fixed;
+    top: 26px;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #ffffff;
+    z-index: 1;
     display: flex;
+    padding: var(--horizontal-space);
     justify-content: space-between;
     align-items: center;
-    padding: var(--horizontal-space);
-    padding-top: 45px;
     margin-bottom: 15px;
 }
 
@@ -14,4 +19,16 @@
 
 .screen-header__icons span {
     margin-left: 25px;
+}
+
+@keyframes rotateCog {
+    from {
+        transform: none;
+    }
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+.screen-header__icons .fa-cog:hover {
+    animation: rotateCog 2s linear infinite;
 }
