--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,21 @@
 @import "./components/status-bar.css";
 @import "./components/nav-bar.css";
 @import "./components/screen-header.css";
+@import "./components/alt-screen-header.css";
 @import "./components/user-component.css";
 @import "./components/badge.css";
+@import "./components/icon-row.css";
+@import "./components/no-mobile.css";
+
 
 /* Screens */
 @import "./screens/login.css";
 @import "./screens/friends.css";
+@import "./screens/find.css";
+@import "./screens/more.css";
+@import "./screens/settings.css";
+@import "./screens/chat-screen.css";
+
 
 
 
@@ -21,5 +30,6 @@ body {
 }
 
 .main-screen {
+  margin-top: 106px;
   padding: 0px var(--horizontal-space);
 }
