--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -14,6 +14,9 @@
 .alt-header__title {
     font-size: 30px;
     font-weight: 600;
+    background: linear-gradient(to right top, #65dfc9, #658ec6);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .alt-header__column {
