--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -3,6 +3,11 @@
   position: fixed;
   top: 0;
   background-color: #ffffff;
+  background: linear-gradient(      /*    */
+    to right bottom,
+    rgba(255, 255, 255, 0.9),
+    rgba(255, 255, 255, 0.8)
+  );
   display: flex;
   width: 100%;
   box-sizing: border-box;
