--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,9 +1,18 @@
+.friends-display-wrapper {
+  background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+}
+
 #friends-display-link {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #fafafa;
+  background-color: white;
+  background: linear-gradient(      /*    */
+    to right bottom,
+    rgba(255, 255, 255, 0.9),
+    rgba(255, 255, 255, 0.8)
+  );
   padding: 15px 0;
   font-size: 16px;
   margin-top: 106px;  /*-15px;*/
@@ -52,7 +61,7 @@
 
 #splash-screen {
   z-index: 3;
-  background-color: var(--yellow);
+  background-color: #fff;
   position: absolute;
   height: 100vh;
   width: 100vw;
